feat: GitHub Actions를 통한 자동 빌드 및 배포 설정 추가
- GitHub Actions 워크플로우 추가 (.github/workflows/jekyll-gh-pages.yml)
- Jekyll 설정 업데이트 (_config.yml)
  - 배포 경로를 docs로 변경
  - GitHub Pages 호환성 설정 추가
- Gemfile 추가 (Jekyll 의존성 관리)
- README.md 업데이트 (자동 배포 방법 설명)
- docs 디렉토리를 GitHub Pages 배포 경로로 설정

--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,42 @@ url: "https://linux.jiny.dev"
 twitter_username: infohojin
 github_username:  infohojin@gmail.com
 
+# GitHub Pages 배포를 위한 설정
 source: src
 destination: docs
 
 github_url: https://github.com/jinydev/linux
 
+# Jekyll 설정
+markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
+# 플러그인 설정
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  - jekyll-feed
+
+# Sass 설정
 sass:
   load_paths:
     - _sass
     - ../node_modules/bootstrap/scss
 
-plugins:
-  - jekyll-seo-tag
-  - jekyll-sitemap
+# GitHub Pages 호환성을 위한 설정
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
+  - .github/
+  - .git/
+  - README.md
+  - package.json
+  - package-lock.json
